update (or add) package.html example import-package statement to use version range

--- a/templates/org.osgi.service.template/src/org/osgi/service/template/package.html
+++ b/templates/org.osgi.service.template/src/org/osgi/service/template/package.html
@@ -5,6 +5,6 @@
 in the Import-Package header of the bundle's manifest.
 For example:
 <pre>
-Import-Package: org.osgi.service.#template#; version=1.0
+Import-Package: org.osgi.service.#template#; version=&quot;[1.0,2.0)&quot;
 </pre>
 </BODY>
